feat: add API feature Logout
