# internal/router/auth.router.go
@@ -3,6 +3,8 @@ package router
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/iamhanif11/shortlink-backend.git/internal/controller"
+	"github.com/iamhanif11/shortlink-backend.git/internal/middleware"
+	"github.com/redis/go-redis/v9"
 
 	// "github.com/iamhanif11/shortlink-backend.git/internal/middleware"
 	"github.com/iamhanif11/shortlink-backend.git/internal/repository"
@@ -10,10 +12,10 @@ import (
 	"github.com/jackc/pgx/v5/pgxpool"
 )
 
-func AuthRouter(apiRouter *gin.RouterGroup, db *pgxpool.Pool) {
+func AuthRouter(apiRouter *gin.RouterGroup, db *pgxpool.Pool, rc *redis.Client) {
 
 	authRepository := repository.NewAuthRepository(db)
-	authService := service.NewAuthService(authRepository)
+	authService := service.NewAuthService(authRepository, rc)
 	authController := controller.NewAuthController(authService)
 
 	// authMiddleware := middleware.NewAuthMiddleware(authRepository)
@@ -21,4 +23,5 @@ func AuthRouter(apiRouter *gin.RouterGroup, db *pgxpool.Pool) {
 	apiRouter.POST("/register", authController.Register)
 	apiRouter.POST("/login", authController.Login)
 
+	apiRouter.DELETE("/logout", middleware.VerifyToken(rc), authController.Logout)
 }
